@startuml
title OOD Class Diagram - RVC Controller

skinparam classAttributeIconSize 0

class RvcController {
  +RvcController(motor, cleaner, timer, frontSensor, sideSensor)
  +PressPowerButton()
  +FrontObstacleDetected()
  +FrontPathClear()
  +SideSensorUpdated(leftBlocked)
  +DustDetected()
  +PowerUpTimerExpired()
  +MotionCompleted(motion)
  +Snapshot(): ControllerSnapshot
  +Update(input): ControlCommand
  -SetLastMotion(motion)
  -SetLastCleaner(cleaner)
  -ResumeForwardCleaning()
  -PowerOffSafely()
  -right_turn_attempted_: bool
}

class ControllerState {
  -power_state_: PowerState
  -cleaning_state_: CleaningState
  +IsPoweredOn(): bool
  +IsPoweredOff(): bool
  +IsAvoidingObstacle(): bool
  +CurrentCleaningState(): CleaningState
  +CurrentPowerState(): PowerState
  +SetPowerState(state)
  +SetCleaningState(state)
}

class ObstacleAvoidancePolicy {
  +SelectMotion(leftBlocked): MotionCommand
}

interface MotorPort {
  +Forward()
  +Backward()
  +TurnLeft()
  +TurnRight()
  +Stop()
}

interface CleanerPort {
  +TurnOn()
  +TurnOff()
  +PowerUp()
}

interface FrontSensorPort {
  +RequestFrontCheck()
}

interface SideSensorPort {
  +RequestSideCheck()
}

interface TimerPort {
  +StartPowerUpTimer(seconds)
  +RestartPowerUpTimer(seconds)
  +CancelPowerUpTimer()
}

class SensorInput {
  +front_obstacle: bool
  +left_obstacle: bool
  +dust_detected: bool
}

class ControlCommand {
  +motion: MotionCommand
  +cleaner: CleanerCommand
}

class ControllerSnapshot {
  +power_state: PowerState
  +cleaning_state: CleaningState
  +last_motion: MotionCommand
  +last_cleaner: CleanerCommand
}

enum PowerState {
  Off
  On
}

enum CleaningState {
  PoweredOff
  CheckingFront
  CleaningForward
  PowerUpCleaning
  AvoidingObstacle
}

enum MotionCommand {
  Stop
  Forward
  Backward
  TurnLeft
  TurnRight
}

enum CleanerCommand {
  Off
  On
  PowerUp
}

RvcController *-- ControllerState
RvcController --> ObstacleAvoidancePolicy
RvcController --> MotorPort
RvcController --> CleanerPort
RvcController --> FrontSensorPort
RvcController --> SideSensorPort
RvcController --> TimerPort
RvcController ..> SensorInput
RvcController ..> ControlCommand
RvcController ..> ControllerSnapshot

ControllerState --> PowerState
ControllerState --> CleaningState
ObstacleAvoidancePolicy --> MotionCommand
MotorPort --> MotionCommand
CleanerPort --> CleanerCommand
ControlCommand --> MotionCommand
ControlCommand --> CleanerCommand
ControllerSnapshot --> PowerState
ControllerSnapshot --> CleaningState
ControllerSnapshot --> MotionCommand
ControllerSnapshot --> CleanerCommand

note right of RvcController
Only this class receives system operations.
The seven public event methods are the
system boundary operations. Snapshot()
and Update() are implementation helpers
used for state reporting and legacy tests.
end note

note bottom of ObstacleAvoidancePolicy #BBDEFB
[CHG-001][Option C] Left-only side sensor:
left clear  -> TurnLeft
left blocked -> TurnRight (fallback, no right sensor)
Dead-end (front still blocked after the right turn,
tracked by right_turn_attempted_) is handled by
RvcController: TurnLeft to restore the original
heading first, then Backward into the open cell
behind (avoids reversing into the left obstacle).
end note
@enduml
